--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>This is a demo </title> 
+    <link rel="stylesheet" src="./styles.css">
   </head>
   <body>
     <nav class="sticky fixed-top bg-dark">
