changed src to href

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>This is a demo </title> 
-    <link rel="stylesheet" src="./styles.css">
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
     <nav class="sticky fixed-top bg-dark">
